2020-01-13  Keith Marshall  <keith@users.osdn.me>

	Publish MinGW.org WSL-5.2.3 package set.

	* mingw32/mingw32-runtime.xml (mingwrt-5.2.3-dev, mingwrt-5.2.3-dll)
	(mingwrt-5.2.3-lic, mingwrt-5.2.3-man, libmingwex-5.2.3-dll-2)
	(libmingwex-5.2.3-dev, w32api-5.2.3-dev): Add references.
	* common/issue.log mingw32/issue.log: Update accordingly.

2020-01-10  Keith Marshall  <keith@users.osdn.me>

	Address MinGW-Issue #39902; correct minizip dependencies.

	* mingw32/mingw32-zlib.xml (libminizip-mingw32-dll): Remove...
	(mingw32-libz-%-mingw32-dll-1.tar): ...this dependency; replace...
	(mingw32-libz-*-mingw32-dll-1.tar): ...with version agnostic form.
	(mingw32-libbz2-*-mingw32-dll-2.tar): Add missing dependency.
	* common/issue.log mingw32/issue.log: Update accordingly.

2019-10-13  Keith Marshall  <keith@users.osdn.me>

	GCC update to address MinGW-Issue #39639; link with libiconv.

	* mingw32/mingw32-gcc4.xml: Update all packages to release 8.2.0-5
	* common/issue.log mingw32/issue.log: Update accordingly.

2019-10-13  Keith Marshall  <keith@users.osdn.me>

	Update to accommodate C++11 deprecation of "auto_ptr".

	* tests/xmlcheck.cpp (unique_or_auto_ptr): New macro; define it...
	[__cplusplus >= 201103L]: ...as "unique_ptr", for C++11 onward, or...
	[__cplusplus < 201103L]: ...as "auto_ptr", for earlier C++.

2019-07-06  Keith Marshall  <keith@users.osdn.me>

	Publish MinGW.org WSL-5.2.2 package set.

	* mingw32/mingw32-runtime.xml (mingwrt-5.2.2-dev, mingwrt-5.2.2-dll)
	(mingwrt-5.2.2-lic, mingwrt-5.2.2-man, libmingwex-5.2.2-dll-2)
	(libmingwex-5.2.2-dev, w32api-5.2.2-dev): Add references.
	* common/issue.log mingw32/issue.log: Update accordingly.

2019-07-04  Keith Marshall  <keith@users.osdn.me>

	Correct -Wformat handling of "%hhn" for __mingw_format__.

	* mingw32/mingw32-gcc4.xml: Update all packages to release 8.2.0-4
	* common/issue.log mingw32/issue.log: Update accordingly.

2019-04-29  Keith Marshall  <keith@users.osdn.me>

	Correct a package name typo.