@@ -51,8 +51,8 @@
   cd33ad74b608bce33ea297801253e6efbafce27c 2012073100 mingw32-mingw-utils.xml
   2d0fee36823579871e8d747ae4d4676da6071654 2018122800 mingw32-mpc.xml
   1b5e1e0c486dad8396884033777e13357365ad76 2018122800 mingw32-mpfr.xml
-  5c9570cce1ddd4fe275b83acbc06739a4361c26a 2020011300 mingw32-package-list.xml
-  1f15439ee5f66ec22321c7aa853559b6f8f7172f 2015090800 mingw32-pexports.xml
+  5c9570cce1ddd4fe275b83acbc06739a4361c26a 2020013100 mingw32-package-list.xml
+  0b8b7868e93c4fbaab57da8ca1fcb7700905fa92 2020013100 mingw32-pexports.xml
   cdb2a4dbedfc9f2cdfc92340f6f9b12da061c0d9 2012073100 mingw32-popt.xml
   6032af6ff68aa4821cf51938781fd9e75f05de5f 2016082200 mingw32-pthreads-w32.xml
   4c94bebce59b43a02997ada4eef64e5e19d98745 2020011300 mingw32-runtime.xml
